# g4eval_hp_lite

./: CMakeLists.txt  SimEvaluator_hp.cc  SimEvaluator_hp.h  TrackingEvaluatorLight_hp.cc  TrackingEvaluatorLight_hp.h  TrackingEvaluatorLight_hpLinkDef.h  TrackingEvaluator_hp.cc  TrackingEvaluator_hp.h
cmake/: RootMacros.cmake
